examples/test/testpolicy3068.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3068
  namespace: namespace144
spec:
  podSelector:
    matchLabels:
      key48: value36
      key8: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value45
          key32: value18
      podSelector:
        matchLabels:
          key29: value6
          key23: value33
